[package]
name = "client"
version = "0.1.0"
authors = ["timokae <timo2503k@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix = "0.10.0-alpha.3"
tokio = { version = "0.2", features = ["full"] }