[package]
name = "node-app"
version = "0.1.0"
authors = ["timokae <timo2503k@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.2.0"
actix-web = "2.0"
actix-rt = "1.0"
actix = "0.9.0"
actix-files = "0.2.2"
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4"
rusqlite = "0.23.1"
futures = "0.3.5"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
reqwest = { version = "0.10", features = ["json"] }
rand = "0.7.3"
fern = {version = "0.6.0", features = ["colored"]}
log = "0.4.8"
ctrlc = "3.1.4"
parking_lot = "0.11.0"