[package]
name = "node-app"
version = "0.1.0"
authors = ["timokae <timo2503k@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
chrono = "0.4"
rusqlite = "0.23.1"
futures = "0.3.5"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
reqwest = { version = "0.10", features = ["json"] }
rand = "0.7.3"
fern = {version = "0.6.0", features = ["colored"]}
log = "0.4.8"
ctrlc = "3.1.4"
async-trait = "0.1.36"
sha2 = "0.9.1"
rust-crypto = "^0.2"
multipart = "0.17.0"
bytes = "0.5.6"